--- a/_posts/2019-02-15-git国内下载安装问题.md
+++ b/_posts/2019-02-15-git国内下载安装问题.md
@@ -11,5 +11,5 @@ title: test---liu
 3. 热心网友的csdn下载链接（需要积分，往往还不是最新版）
 4. 在半夜下载23点往后，就可以了（可能网好，恨郁闷）
 
-！[官网界面]({{ site.url }}/assets/img/git下载页面.PNG)
-！[360软件管家]({{ site.url }}/assets/img/360下载git.PNG)
+![官网界面]({{ site.url }}/assets/img/git下载页面.PNG)
+![360软件管家]({{ site.url }}/assets/img/360下载git.PNG)
