Signed-off-by: ljyeso <ljyes@outlook.com>

--- a/_posts/2019-02-15-git国内下载安装问题.md
+++ b/_posts/2019-02-15-git国内下载安装问题.md
@@ -1,11 +1,12 @@
 ---
-layout: default
-title: test---liu
+layout: post
+title: git国内下载问题解决方案
+tags:
+  git
 ---
 
-# git国内下载问题解决方案
-
 ##方法
+
 1. 360软件管家（有用可下载最新版，其它的软件未试）
 2. 热心网友的“国内镜像”，实际上是百度网盘（需下载同git安装包差不多大的百度软件，再以龟速下载，往往还不是最新版）
 3. 热心网友的csdn下载链接（需要积分，往往还不是最新版）
