Signed-off-by: ljyeso <ljyes@outlook.com>

--- a/_posts/2019-02-15-marked.js options.md
+++ b/_posts/2019-02-15-marked.js options.md
@@ -2,11 +2,11 @@
 layout: post
 title: marked.js配置
 tags:
-  marked.js
-  options
+ - marked.js
+ - options
 categories:
-  nodejs
-  js
+ - nodejs
+ - js
 ---
 
 ```js
