Signed-off-by: ljyeso <ljyes@outlook.com>

--- a/_posts/2019-02-15-marked.js options.md
+++ b/_posts/2019-02-15-marked.js options.md
@@ -4,11 +4,9 @@ title: marked.js配置
 tags:
  - marked.js
  - options
-categories:
- - nodejs
- - js
 ---
 
+## marked.js配置翻译
 ```js
 /*
 marked(markdownString [,options] [,callback])
