Signed-off-by: ljyeso <ljyes@outlook.com>

--- a/_posts/2019-02-15-git国内下载安装问题.md
+++ b/_posts/2019-02-15-git国内下载安装问题.md
@@ -7,6 +7,7 @@ categories:
 tags:
 - git
 - git下载安装
+permalink: /blog/
 ---
 
 ## 方法
@@ -16,5 +17,5 @@ tags:
 3. 热心网友的csdn下载链接（需要积分，往往还不是最新版）
 4. 在半夜下载23点往后，就可以了（可能网好，恨郁闷）
 
-![官网界面]({{ site.url }}/assets/img/git下载页面.PNG)
-![360软件管家]({{ site.url }}/assets/img/360下载git.PNG)
+![官网界面](/assets/img/git下载页面.PNG)
+![360软件管家](/assets/img/360下载git.PNG)
